pn-site/css/main.css
/* ----- */
/* Fonts */
/* ----- */

@font-face {
  font-family: "IFAO-Grec Subset";
  src:
    url("/fonts/IFAO-Grec-Unicode-subset.woff2") format("woff2"),
    url("/fonts/IFAO-Grec-Unicode-subset.woff") format("woff");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}



/* ------------------- */
/* Main Page Structure */
/* ------------------- */
body {
  /* Ensure the footer is always at the bottom */
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.bg-primary-darker {
  background-color: var(--bs-primary-text-emphasis);
}

#masthead::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: url('/images/header.jpg');
  opacity: 0.4;
  z-index: 0;
}

.navbar[data-bs-theme="dark"] {
  --bs-navbar-brand-font-size: 2rem;
  --bs-navbar-color: rgba(255, 255, 255, 0.8);
  --bs-navbar-hover-color: rgba(255, 255, 255, 1);
  --bs-navbar-disabled-color: rgba(255, 255, 255, 1);
  --bs-navbar-active-color: #fff;

  --bs-link-color: var(--bs-navbar-color);
  --bs-link-hover-color: var(--bs-navbar-hover-color);
  --bs-navbar-toggler-border-color: var(--bs-navbar-color);
}

.navbar-brand {
  font-family: var(--bs-font-serif);
  font-weight: 500;
}

.nav-category {
  font-family: var(--bs-font-sans-serif);
  color: white;
  font-weight: 600;
}

footer ul.about-links {
  column-count: 1;

  @media (min-width: 992px) {
    column-count: 2;
    column-gap: 1.5rem;
  }
}

/* ------------- */
/* Headings      */
/* ------------- */

.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
  margin-bottom: 0.75rem;
  font-weight: 600;
}

h1, .h1 {
  color: var(--bs-primary);
  margin-bottom: 1.25rem;
  a {
    color: inherit;
  }
  a:hover {
    color: var(--bs-link-hover-color);
    text-decoration-style: solid;
  }
}

h2 {
  color: var(--bs-success);
}

h3 {
  color: var(--bs-secondary);
}

/* Improve spacing below elements that precede headings */
*:has(+ h1),*:has(+ h2),*:has(+ h3),*:has(+ h4),*:has(+ h5),*:has(+ h6) {
  margin-bottom: 2rem;
}

/* ----------------- */
/* Misc Typography   */
/* ----------------- */
pre code {
  color: var(--bs-code-color);
}

/* ------------------------------ */
/* Transcriptions & Translations  */
/* TODO: port more related styles */
/* from master.css                */
/* ------------------------------ */

.transcription span[data-bs-original-title]:hover {
  background-color: var(--bs-warning-bg-subtle);
}

.textpartnumber {
  display: block;
  margin-left: -3em;
  font-weight: 600;
}

.linenumber, .linenumberbroken {
  float: left;
  margin-left: -2em;
}

.linenumberbroken {
  color: var(--bs-danger);
}

#edition {
  margin-left: 3em;
}

#apparatus {
  margin-left: -3em;
}

span.term {
  border: 1px solid var(--bs-success);
  padding: 0.1rem 0.2rem;
}

/* ------------- */
/* Links         */
/* ------------- */

a {
  text-underline-offset: 0.125em;
}

.no-link-underline a:not(:hover) {
  text-decoration: none;
}

/* ------------- */
/* Lists         */
/* ------------- */
.list-group {
  --bs-list-group-action-color: var(--bs-body-color);
  --bs-list-group-active-bg: var(--bs-primary);
  --bs-list-group-active-border-color: var(--bs-list-group-active-bg);
}

.columns-2 {
  column-count: 2;
  column-gap: 1.5rem;
}

.columns-3 {
  column-count: 3;
  column-gap: 1.5rem;
}

.columns-4 {
  column-count: 4;
  column-gap: 1.5rem;
}

.list-outdent {
  li {
    text-indent: -1.2rem;
    padding-left: 1.2rem;
  }
}

/* ------------- */
/* Forms         */
/* ------------- */
.form-check-input:checked {
  background-color: var(--bs-primary);
  border-color: var(--bs-primary);
}

/* ------------- */
/* Accordions    */
/* ------------- */
.accordion {
  --bs-accordion-btn-bg: var(--bs-light);
  --bs-accordion-active-bg: var(--bs-secondary);
  --bs-accordion-active-color: var(--bs-white);
  --bs-accordion-active-border-color: var(--bs-secondary);
  --bs-accordion-btn-active-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='white'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708'/></svg>")
}

/* ------------- */
/* Navs          */
/* ------------- */
.nav-pills {
  --bs-nav-pills-link-active-bg: var(--bs-link-color);
}

/* -------------------------------- */
/* Transcriptions and Languages     */
/* -------------------------------- */

/* Main Body Text */
/* set in theme-variables.css: --bs-body-font-family: var(--bs-font-serif); */

span.ab {
  display: block;
  padding-left: 4em;
  position: relative;
}
div.apparatus {
  margin-top: 1em;
}
span.linenumber {
  display: inline-block;
  position: absolute;
  left: 0;
  text-align: right;
  width: 3em;
}

/* Greek / Latin */
*[lang=grc],*[lang=lat] {
  font-family: var(--bs-font-sans-serif), "Noto Sans Symbols 2";
  font-optical-sizing: auto;
}

/* Greek Numbers and Fractions */
*[lang=grc] span[title^="number:"],
*[lang=grc] span[title^="fraction:"] {
  font-family: "Noto Sans Symbols", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
}

/* Coptic */
*[lang=cop] {
  font-family: "Noto Sans Coptic", "Noto Sans Symbols 2", "IFAO-Grec Subset", var(--bs-font-sans-serif);
  font-size: 18px;
}

/* Arabic */
*[lang=ar] {
  font-family: "Noto Naskh Arabic", "Noto Sans Symbols 2", var(--bs-font-sans-serif);
  font-size: 24px;
}
*[lang=ar] span.ab {
  direction: rtl;
  padding-left: 0;
  padding-right: 2.5em;
  text-align: right;
}
*[lang=ar] div.apparatus {
  font-size: 16px;
  margin-left: 0;
}
*[lang=ar] span.linenumber {
  font-size: 16px;
  margin-top: .4em;
  right: 1em;
}


/* -------------- */
/* Icons          */
/* -------------- */

/* Use Bootstrap Icons (https://icons.getbootstrap.com/) */
/* without using the whole web font. The key is to copy each SVG */
/* we need, escape it and store it as a CSS variable, then use it */
/* as a mask so it inherits the text color. */

:root {
  --icon-edit: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='currentColor'%3e%3cpath d='M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z'/%3e%3cpath fill-rule='evenodd' d='M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z'/%3e%3c/svg%3e");

  --icon-file-code: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' viewBox='0 0 16 16'%3E%3Cpath d='M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5zm-3 0A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5z'/%3E%3Cpath d='M8.646 6.646a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1 0 .708l-2 2a.5.5 0 0 1-.708-.708L10.293 9 8.646 7.354a.5.5 0 0 1 0-.708m-1.292 0a.5.5 0 0 0-.708 0l-2 2a.5.5 0 0 0 0 .708l2 2a.5.5 0 0 0 .708-.708L5.707 9l1.647-1.646a.5.5 0 0 0 0-.708'/%3E%3C/svg%3E");

  --icon-box-arrow-up-right: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5'/%3E%3Cpath fill-rule='evenodd' d='M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z'/%3E%3C/svg%3E");

}

.bi {
  display: inline-block;
  width: 1em;
  height: 1em;
  margin-right: 0.25em;
  vertical-align: -0.125em;
  background-color: currentColor;
  mask-size: contain !important;
  mask-repeat: no-repeat !important;
  mask-position: center !important;
}

.bi-edit {
  mask: var(--icon-edit);
}

.bi-xml {
  mask: var(--icon-file-code);
}

.bi-external-link {
  mask: var(--icon-box-arrow-up-right);
}


/* -------------- */
/* Page Specific  */
/* -------------- */

/* Author Browse Page */

body.author-browse .btn-outline-info.bg-white:hover {
  background-color: var(--bs-info) !important;
  color: #fff !important;
  border-color: var(--bs-info) !important;
}

body.author-browse .btn-outline-primary.bg-white:hover {
  background-color: var(--bs-primary) !important;
  color: #fff !important;
  border-color: var(--bs-primary) !important;
}

body.author-browse .accordion-button {
  font-size: 1.3rem !important;
  font-weight: 500 !important;
}

